--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@clerk/nextjs": "^5.2.3",
     "@clerk/themes": "^2.1.12",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.108.4",
     "@react-three/fiber": "^8.16.8",
     "@tabler/icons-react": "^3.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "framer-motion": "^11.3.6",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
@@ -36,7 +39,10 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
